ading gateway settings

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -92,6 +92,12 @@ server:
 # ===================================================================
 
 jhipster:
+  gateway:
+    rate-limiting:
+      enabled: true
+      limit: 100000
+    authorized-microservices-endpoints: # Access Control Policy, if left empty for a route, all endpoints will be accessible
+      app1: /api,/v2/api-docs # recommended dev configuration
   http:
     cache: # Used by the CachingHttpHeadersFilter
       timeToLiveInDays: 1461
