--- a/pom.xml
+++ b/pom.xml
@@ -576,7 +576,7 @@
                             <image>adoptopenjdk:11-jre-hotspot</image>
                         </from>
                         <to>
-                            <image>tradergateway:latest</image>
+                            <image>ginisolutions/tradergateway:${project.version}</image>
                         </to>
                         <container>
                             <entrypoint>
